# flow-clone

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: README.md  default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/flowclone/: DiskCard.tsx  DiskToDiskIcon.tsx  FlowArrow.tsx  LanguageToggle.tsx  ShellControls.tsx  ThemeToggle.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  switch.tsx
apps/desktop/src/features/clone-flow/: index.ts
apps/desktop/src/features/disk-selection/: HomeScreen.tsx
apps/desktop/src/features/onboarding/: Onboarding.tsx
apps/desktop/src/features/report/: index.ts
apps/desktop/src/features/settings/: Settings.tsx
apps/desktop/src/features/verification/: index.ts
apps/desktop/src/features/verify/: VerifyResultBanner.tsx
apps/desktop/src/hooks/: use-disks.ts
apps/desktop/src/lib/: i18n.ts  tauri.ts  types.ts  utils.ts
apps/desktop/src/routes/: index.tsx
apps/desktop/src/stores/: flow-store.ts  locale-store.ts  onboarding-store.ts  settings-store.ts  theme-store.ts
apps/desktop/src/styles/: globals.css
assets/app-icon/: README.md
assets/branding/: .gitkeep
assets/screenshots/: .gitkeep
crates/flowclone-cli/: Cargo.toml
crates/flowclone-cli/src/: main.rs  used_blocks.rs  win.rs
crates/flowclone-core/: Cargo.toml
crates/flowclone-core/src/: clone.rs  error.rs  job.rs  lib.rs  progress.rs
crates/flowclone-disk/: Cargo.toml
crates/flowclone-disk/src/: lib.rs  linux.rs  macos.rs  model.rs  watcher.rs  windows.rs
crates/flowclone-raw/: Cargo.toml
crates/flowclone-raw/src/: buffer.rs  lib.rs  reader.rs  throttle.rs  writer.rs
crates/flowclone-report/: Cargo.toml
crates/flowclone-report/src/: json.rs  lib.rs  markdown.rs
crates/flowclone-verify/: Cargo.toml
crates/flowclone-verify/src/: checksum.rs  compare.rs  lib.rs  sampler.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  ROADMAP.md  SAFETY.md  SPARSE_IMAGE.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-06-30-onboarding.md  2026-06-30-settings.md  2026-07-01-image-verification.md
docs/superpowers/specs/: 2026-06-30-onboarding-design.md  2026-06-30-settings-design.md  2026-06-30-user-guide-site-design.md  2026-07-01-image-verification-design.md
native/macos-helper/: README.md
native/macos-helper/Sources/: .gitkeep
scripts/: build-macos.sh  build-sidecar.sh  dev.sh  generate-types.sh
site/: index.html  styles.css
