[workspace]
resolver = "2"
members = [
    "crates/flowclone-core",
    "crates/flowclone-disk",
    "crates/flowclone-raw",
    "crates/flowclone-verify",
    "crates/flowclone-report",
    "crates/flowclone-cli",
    "apps/desktop/src-tauri",
]
default-members = ["crates/flowclone-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tom Dhanabhon"]
repository = "https://github.com/tom/flow-clone"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
flowclone-core = { path = "crates/flowclone-core" }
flowclone-disk = { path = "crates/flowclone-disk" }
flowclone-raw = { path = "crates/flowclone-raw" }
flowclone-verify = { path = "crates/flowclone-verify" }
flowclone-report = { path = "crates/flowclone-report" }

# Shared third-party deps
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
