[package]
name = "flowclone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FlowClone command-line interface for testing & debugging"

[[bin]]
name = "flowclone"
path = "src/main.rs"

[dependencies]
flowclone-core = { workspace = true }
flowclone-disk = { workspace = true }
flowclone-raw = { workspace = true }
flowclone-verify = { workspace = true }
flowclone-report = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
