[package]
name = "flowclone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FlowClone command-line interface for testing & debugging"

[[bin]]
name = "flowclone"
path = "src/main.rs"

[dependencies]
flowclone-disk = { workspace = true }
anyhow = { workspace = true }
