[package]
name = "flowclone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FlowClone command-line interface for testing & debugging"

[[bin]]
name = "flowclone"
path = "src/main.rs"

[dependencies]
flowclone-disk = { workspace = true }
flowclone-raw = { workspace = true }
flowclone-verify = { path = "../flowclone-verify" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
