[package]
name = "flowclone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FlowClone clone orchestration engine"

[dependencies]
flowclone-disk = { workspace = true }
flowclone-raw = { workspace = true }
flowclone-verify = { workspace = true }
flowclone-report = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
