[package]
name = "flowclone-disk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FlowClone disk discovery & metadata"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plist = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# DiskArbitration run-loop + CoreFoundation types for the disk watcher.
core-foundation-sys = "0.8"
