[package]
name = "flowclone-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FlowClone markdown/json report generation"

[dependencies]
flowclone-disk = { workspace = true }
flowclone-verify = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
